# battery-optimisation

./: Cargo.toml  README.md  config.toml  consumption.json  justfile  prices.json
src/: calculation.rs  data.rs  dual_simplex.rs  main.rs  tableau_creation.rs
