[package]
name = "battery-optimisation"
version = "0.1.0"
edition = "2021"
authors = ["Ovidiu Ionescu"]
description = "Power usage optimisation using a battery."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
iter_tools = "0.21"
log = "0.4"
minilp = "0.2"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
toml = "0.8.19"

